--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   --font-bold: 700;
 
   --primary-color: #ffffff;
-  --primary-color-dark: #afafaf;
+  --primary-color-dark: #202020;
   --secondary-color: #1F48B1;
   --secondary-color-dark: #132b69;
   --text-color: #202020;
